# inside-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_android.sh
cmake_modules/: FindGLFW.cmake  FindOpenGLES.cmake
include/: AppState.h  AppStateManager.h  Camera.h  Cube.h  CubeGeometry.h  DefaultResourceProvider.h  GUI.h  GameBoard.h  GameState.h  InsideApplication.h  IntersectUtils.h  MenuState.h  Ray.h  RenderInterfaceOpenGLES.h  ResourceManager.h  ResourceProvider.h  ShaderConstants.h  ShaderManager.h  ShaderProgram.h  ShaderUtills.h  ShaderUtils.h  ShellSystemInterface.h  Singleton.h  TextureUtils.h
resources/layouts/: main_menu.rml  window.rml
resources/shaders/: simple.fsh  simple.vsh
src/: AppStateManager.cpp  Camera.cpp  Cube.cpp  CubeGeometry.cpp  DefaultResourceProvider.cpp  GUI.cpp  GameBoard.cpp  GameState.cpp  InsideApplication.cpp  IntersectUtils.cpp  MenuState.cpp  Ray.cpp  RenderInterfaceOpenGLES.cpp  ResourceManager.cpp  ShaderManager.cpp  ShaderProgram.cpp  ShaderUtils.cpp  ShellSystemInterface.cpp  TextureUtils.cpp  main.cpp
